[package]
edition      = "2024"
name         = "esp32-s3-wifi"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32-s3-wifi"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }
smart-leds = "0.4.0"
esp-println = { version = "0.17.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }


esp-bootloader-esp-idf = { version = "=0.4.0", features = ["esp32s3"] }

critical-section = "1.2.0"
esp-hal-smartled = { version = "0.17.0", features = ["esp32s3"] }

#esp-wifi-sys-esp32 = "0.2.0"
esp-wifi-sys-esp32s3 = "0.2.0"

[build-dependencies]
embuild = "*"
anyhow = "1"



# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
